--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html {
 
 body {
     margin: 0;
-    padding 0;
+    padding: 0;
     background-color: var(--background);
 }
 
@@ -25,7 +25,6 @@ header {
 .title-wrapper {
     margin: 1rem;
     padding: 0 1rem;
-    ;
     display: flex;
     align-items: center;
     justify-content: center;
